# LearningWebgpu

./: .gitignore  CMakeLists.txt  CMakePresets.json  Windows.Kits.cmake  Windows.MSVC.toolchain.cmake  gcc.cmake  ninja_toolchain.cmake  run_task.bat  test.json
cmake/Modules/: BundleContent.cmake
cmake/Modules/BundleContent/: BundleContent_Impl.cmake  BundleContent_Utils.cmake  CMakeLists.txt  JC.cmake
cmake_utils/: bundle_static_library.cmake  detect_compiler.cmake  execute_sequential.cmake  fetch_sdl2.cmake  fetch_webgpu.cmake  print_target_properties.cmake  symlink_compile_commands.cmake
src/: CMakeLists.txt  main.cpp  precompiled.hpp
src/app/: CMakeLists.txt  application.cpp  application.hpp
src/utils/: address.hpp  formatters.hpp  print_format.hpp  template_formatters.hpp
src/webgpu/: CMakeLists.txt  webgpu_utils.cpp  webgpu_utils.hpp  webgpu_utils_sep.cpp
